# PDB

./: .gitignore  =8  AUDIO_IMPROVEMENTS.md  CLAUDE.md  DEEPWIKI.md  DoctorPatientBridge.ipynb  FIXES_SUMMARY.md  README.md  TESTING_GUIDE.md  colab_gpu_ollama.ipynb  conf_test.sh  notebook_patientdoctorbridge.ipynb  pyproject.toml  requirements.txt  requirements_kaggle.txt  test_doctor_translation_flow.py
.github/workflows/: ci.yml
arch/: audio_handler.py  config.py  inference_engine.py  translation_service.py
audio/: handler.py  indic_conformer.py  language_id.py  preprocessor.py  recorder.py  script_normalizer.py  tts.py
cli/: bridge.py  main.py  prescription.py  reassure.py  triage.py
config/: hardware.py  languages.py  settings.py
core/: engine.py  session.py
docs/: phase1_eval.md  phase2_eval.md  phase3_eval.md
scripts/: benchmark_ttft.py  run_phase1.py  run_phase2.py
tests/: conftest.py  test_audio_preprocessing.py  test_engine.py  test_handler.py  test_language_id.py  test_prescription.py  test_reassurance.py  test_recorder.py  test_translation.py  test_triage.py
translation/: prescription.py  prompts.py  reassurance.py  service.py  triage.py
web/: server.py
web/static/: index.html
