[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-doctor-bridge"
version = "0.1.0"
description = "PatientDoctorBridge — voice capture, language detection, and Gemma 4 translation"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faster-whisper==1.1.1",
    "sounddevice==0.5.1",
    "scipy==1.15.2",
    "numpy>=1.24,<3",
    "rich>=13",
    "ollama>=0.4.7",
    "flask>=3.0",
    "requests>=2.31",
    # ── Text-to-speech (Facebook MMS-TTS via HuggingFace transformers) ──
    # MMS-TTS is loaded by audio/tts.py::TTSService.synthesize() and used by
    # the /api/tts endpoint to read aloud doctor→patient translations,
    # reassurance phrases, and prescription summaries.  transformers needs
    # torch at runtime to construct the VitsModel and run inference.  CPU
    # wheels are sufficient — no CUDA build is required for the laptop /
    # Pi 5 deployment targets called out in CLAUDE.md.
    #
    # Note: these same two packages also back the optional AI4Bharat
    # IndicConformer-600M ASR backend exposed by audio/indic_conformer.py
    # (see the [project.optional-dependencies] indic-asr extra below for
    # additions that are *only* needed when that backend is selected).
    "torch>=2.2,<3",
    "transformers>=4.40,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
# Extras for the optional AI4Bharat IndicConformer-600M ASR backend
# (audio/indic_conformer.py).  Install with:
#     pip install -e .[indic-asr]
# torchaudio is loaded by the checkpoint's trust_remote_code path; it is
# NOT needed for the default Whisper backend, so we leave it out of the
# base install to avoid the extra ~50 MB / dependency-resolution hit.
indic-asr = [
    "torchaudio>=2.2,<3",
]

[project.scripts]
pdb = "cli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["audio*", "cli*", "config*", "core*", "translation*", "web*"]
